# cellular-automata_plug-in

./: .gitignore  CLAUDE.md  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-lfo-smoothing/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-iridescent-color-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-extract-casimulator/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/03-safe-parameter-control/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/04-scope-plugin-wrapper/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
plugins/: test_smoothing.py
plugins/cellular_automata/: __init__.py  __main__.py  cca.py  color_layers.py  colormaps.py  controls.py  engine_base.py  excitable.py  gray_scott.py  iridescent.py  lenia.py  life.py  mnca.py  pipeline.py  plugin.py  presets.py  pyproject.toml  setup.py  simulator.py  smoothing.py  smoothlife.py  viewer.py
