[project]
name = "cellular-automata-scope-plugin"
version = "0.2.0"
description = "Bioluminescent cellular automata video source for DayDream Scope"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
]

[project.entry-points."scope"]
cellular_automata = "cellular_automata.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cellular_automata"]
exclude = [
    "cellular_automata/viewer.py",
    "cellular_automata/controls.py",
    "cellular_automata/__main__.py",
]
