[project]
name = "cellular-automata-scope-plugin"
version = "0.2.0"
description = "Bioluminescent cellular automata video source for DayDream Scope"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
]

[project.entry-points."scope"]
cellular_automata = "cellular_automata.plugin"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["cellular_automata*"]
